--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "redirects": [
-    { "src": "/.*", "dest": "/index.html" }
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
