--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  "rewrites": [
+    { "src": "/.*", "destination": "/index.html" }
   ]
 }
