--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "src": "/.*", "destination": "/index.html" }
+    { "source": "/.*", "destination": "/index.html" }
   ]
 }
