--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
             "scripts": ["./node_modules/flowbite/dist/flowbite.min.js"],
             "server": "src/main.server.ts",
             "outputMode": "server",
+            "baseHref": "/",
             "ssr": {
               "entry": "src/server.ts"
             }
